k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whatsapp-masivo
  labels:
    name: whatsapp-masivo
